src/components/skills.css
#skills {
  width: 100%;
  height: 50vh;
  background: linear-gradient(147deg, #dadada, transparent);
  overflow: hidden;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 5%;
  white-space: nowrap;
}

#skills > * {
  animation: slide 15s linear infinite;
  width: 26%;
  height: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
#skills p {
  font-size: 70px;
  text-align: start;
  width: 100%;
}

#skills ul {
  display: flex;
  justify-content: center;
  align-items: start;
  flex-direction: column;
  font-size: 20px;
  list-style-type: none;
}

span {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
}

span p {
  margin: 0;
}
#skills span .description {
  font-size: 15px;
  text-wrap: wrap;
  width: 100%;
}

.description-slills-container {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15%;
}

@media (max-width: 770px) {
  #skills {
    width: 100%;
    height: 57vh;
    background: linear-gradient(147deg, #dadada, transparent);
    overflow: hidden;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 5%;
    white-space: nowrap;
  }

  #skills p {
    font-size: 43px;
    text-align: start;
    width: 100%;
  }

  #skills span .description {
    font-size: 15px;
    text-wrap: wrap;
    width: 100%;
  }

  #skills > * {
    animation: slide 15s linear infinite;
    width: 38%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #skills ul {
    width: 37%;
    display: flex;
    justify-content: center;
    align-items: start;
    flex-direction: column;
    font-size: 14px;
    list-style-type: none;
  }
}

